--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version 0.2.0
+Date: 19.08.2019
+  New:
+    - Works with Rich Text Helper
+    - Line Name can be set via Rich Text Helper
+  Changes:
+    - New GUI
+    - New Code
+---------------------------------------------------------------------------------------------------
 Version 0.1.0
 Date: 28.06.2019
   Features:
