--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.1
+Date: 24.01.2020
+  Changes:
+    - Update to .18
+---------------------------------------------------------------------------------------------------
 Version 0.2.0
 Date: 19.08.2019
   New:
