--- a/changelog.txt
+++ b/changelog.txt
@@ -1,19 +1,24 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.2
+Date: 26.02.2020
+  Bugfixes:
+    - Fixed missing Icon Error
+---------------------------------------------------------------------------------------------------
 Version: 0.2.1
 Date: 24.01.2020
   Changes:
     - Update to .18
 ---------------------------------------------------------------------------------------------------
-Version 0.2.0
+Version: 0.2.0
 Date: 19.08.2019
-  New:
+  Features:
     - Works with Rich Text Helper
     - Line Name can be set via Rich Text Helper
   Changes:
     - New GUI
     - New Code
 ---------------------------------------------------------------------------------------------------
-Version 0.1.0
+Version: 0.1.0
 Date: 28.06.2019
   Features:
     - A Way to send Trains around the Map via the Circuit Network
