--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.1
+Date: 31.05.2020
+  Bugfixes:
+    - Fixed a startup bug
+---------------------------------------------------------------------------------------------------
 Version: 0.3.0
 Date: 31.05.2020
   Bugfixes:
