--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.2
+Date: 07.06.2020
+  Bugfixes:
+    - Fixed a bug with changing the gui locations of other mods
+---------------------------------------------------------------------------------------------------
 Version: 0.3.1
 Date: 31.05.2020
   Bugfixes:
