--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.3
+Date: 10.06.2020
+  Bugfixes:
+    - Fixed a bug with bad code
+  Features:
+    - Removed Version Number
+---------------------------------------------------------------------------------------------------
 Version: 0.3.2
 Date: 07.06.2020
   Bugfixes:
