--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.4
+Date: 10.06.2020
+  Features:
+    - Removed duplicate deletion
+---------------------------------------------------------------------------------------------------
 Version: 0.3.3
 Date: 10.06.2020
   Bugfixes:
