--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.6
+Date: 26.06.2020
+  Features:
+    - You can now extend the lines with new stations
+---------------------------------------------------------------------------------------------------
 Version: 0.3.5
 Date: 10.06.2020
   Bugfixes:
