--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.7
+Date: 03.07.2020
+  Bugfixes:
+    - Fixed extend line
+---------------------------------------------------------------------------------------------------
 Version: 0.3.6
 Date: 26.06.2020
   Features:
