--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.8
+Date: 24.11.2020
+  Changes:
+    - Update to 1.1
+---------------------------------------------------------------------------------------------------
 Version: 0.3.7
 Date: 03.07.2020
   Bugfixes:
