--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.1
+Date: 04.07.2024
+  Bugfixes:
+    - Fixed a bug with deleting a line
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 13.06.2024
   Gui:
