--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.2
+Date: 20.07.2024
+  Bugfixes:
+    - Hopefully fixed a few issues with multiplayer and the gui
+---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 04.07.2024
   Bugfixes:
