--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.3
+Date: 21.07.2024
+  Bugfixes:
+    - Fixed a bug with deleting a line in multiplayer
+  Features:
+    - When adding a line, the gui will open with the new line selected
+---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: 20.07.2024
   Bugfixes:
