--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.4
+Date: 21.07.2024
+  Bugfixes:
+    - Fixed a bug with adding a new line, which doesnt change the internal selectedIndex value
+---------------------------------------------------------------------------------------------------
 Version: 1.0.3
 Date: 21.07.2024
   Bugfixes:
