--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.5
+Date: 04.08.2024
+  Bugfixes:
+    - Fixed a severe bug with deleting lines, stupid lua
+---------------------------------------------------------------------------------------------------
 Version: 1.0.4
 Date: 21.07.2024
   Bugfixes:
